syntax="proto3";

package node;

message AddressState {
	bytes Balance = 1;
	bytes Nounce  = 2;
}

message Block {
    int64 Timestamp = 1;
    bytes Data = 2;
    bytes PrevBlockHash = 3;
    bytes Hash = 4;
    bytes Signature = 5;
    repeated Transaction Transactions = 6;
}

message Transaction {
    bytes Hash = 1;
    string PubKey = 2;
    string Nounce = 3;
    bytes Data = 4;
    string From = 5;
    string To = 6;
    string Value = 7;
    string TransactionFees = 8;
    bytes Signature = 9;
    bytes Chain = 10;
}

enum ChanNodeType {
    FILE = 0;
    DIR = 1;
    CHANNEL = 2;
    SUBCHANNEL = 3;
    ENTRY = 4;
    OTHER = 5;
}

message ChanNode {
    string Name = 1;
    string Hash = 2;
    string Size = 3;
    string Owner = 4;
    bool Enabled = 5;
    ChanNodeType NodeType = 6;
    string ParentHash = 7;
    string Description = 8;
    string ContentType = 9;
    repeated string Attributes = 10;
    repeated string Admins = 11;

}

enum TransactionDataPayloadType {
    NONE = 0;
    UPDATE_BLOCKCHAIN_SETTINGS = 1;
    CREATE_NODE = 2;
    UPDATE_NODE = 3;
}

message TransactionDataPayload {
    TransactionDataPayloadType Type = 1;
    bytes Payload = 2;
}

message ChanActionCreateNode {
    string ParentHash = 1;
    string Name = 2;
    ChanNodeType NodeType = 3;
    string Description = 4;
    string ContentType = 5;
    repeated string Attributes = 6;
}

message GossipPayload {
    enum GossipPayloadType {
        BLOCK = 0;
        TRANSACTION = 1;
    }
    GossipPayloadType Type = 1;
    bytes Payload = 2;
}

enum BlockQueryType {
    HEIGHT = 0;
    BLOCK = 1;
}

message BlockQuery {
    BlockQueryType Type = 1;
    uint64 BlockNoFrom = 2;
    uint64 BlockNoTo = 3;
}

message BlockQueryResponse {
    uint64 From = 1;
    uint64 To = 2;
    // bytes Payload = 3;
    repeated Block Payload = 3;
    bool Error = 4;
    BlockQueryType Type = 5;
    uint64 NodeHeight = 6;
}
